--- a/pkbuild/PKGBUILD
+++ b/pkbuild/PKGBUILD
@@ -18,10 +18,10 @@ conflicts=()
 source=("${_pkgname}::git+https://github.com/biglinux/klassy")
 sha256sums=('SKIP')
 
-pkgver () {
-  cd "${_pkgname}"
-  git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
-}
+#pkgver () {
+#  cd "${_pkgname}"
+#  git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
+#}
 
 build() {
   cd "${_pkgname}"
