--- a/pkbuild/PKGBUILD
+++ b/pkbuild/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Art Dev <artdevjs at gmail dot com>
 
 _pkgname=klassy
-pkgname=${_pkgname}-git
+pkgname=${_pkgname}
 pkgver=4.0.breeze5.25.80.r3.g15bcf1f2
 pkgrel=1
 pkgdesc='Klassy is a highly customizable binary Window Decoration and Application Style plugin for recent versions of the KDE Plasma desktop. It provides the Klassy, Kite, Oxygen/Breeze, and Redmond icon styles.'
