--- a/pkbuild/PKGBUILD
+++ b/pkbuild/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=${_pkgname}
 pkgver=4.0.breeze5.25.80.r3.g15bcf1f2
 pkgrel=1
 pkgdesc='Klassy is a highly customizable binary Window Decoration and Application Style plugin for recent versions of the KDE Plasma desktop. It provides the Klassy, Kite, Oxygen/Breeze, and Redmond icon styles.'
-arch=(x86_64)
+arch=(any)
 url="https://github.com/paulmcauley/klassy"
 license=(GPL)
 replaces=(classik-git)
