--- a/pkbuild/PKGBUILD
+++ b/pkbuild/PKGBUILD
@@ -15,9 +15,8 @@ makedepends=(git extra-cmake-modules kcmutils)
 optdepends=('kcmutils: for klassy-settings')
 provides=()
 conflicts=()
-source=("${_pkgname}::git+https://github.com/biglinux/klassy")
+source=("${_pkgname}::git+https://github.com/paulmcauley/klassy")
 sha256sums=('SKIP')
-
 #pkgver () {
 #  cd "${_pkgname}"
 #  git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
